<resources>
    <string name="app_name">TuaObra para Pedreiro</string>
    <string name="title_demanda">Demanda</string>
    <string name="title_contato">Contato</string>
    <string name="title_mais">Mais</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirmar senha</string>
    <string name="hint_contato_whatsapp">Contato WhatsApp</string>
    <string name="hint_descricao">Descrição</string>
    <string name="hint_url_imagem_perfil">URL Imagem Perfil</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_nome_lugar">Nome do Lugar</string>
    <string name="hint_numero">Número</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_ver_detalhes">Ver detalhes</string>
    <string name="titulo_demanda">Demanda em Destaque</string>
    <string name="btn_login">Bora</string>
    <string name="hint_contato">Contato (WhatsApp)</string>
    <string name="text_nao_tem_conta">Não tem uma conta? Cadastre-se aqui!</string>
    <string name="detatlhes_demanda">O que o cliente quer</string>
    <string name="data_publicacao_demanda">Data da publicação</string>
    <string name="trabalho_ser_feito">Trabalho a ser feito</string>
    <string name="local_demanda">Lugar onde será</string>
    <string name="contato_cliente">Contato do Cliente</string>
    <string name="telefone_validado">Telefone validado pelo cliente</string>
    <string name="nome_cliente">Rixxx</string>
    <string name="email_cliente">riaxxxxx@xxxxxx.xxx</string>
    <string name="contato_clieinte">(87) xxxxx-xxxx</string>
    <string name="btn_falar_cliente">Quero o contato</string>
    <string name="txt_nome_lugar">Nome do lugar</string>
    <string name="txt_número">Número</string>
    <string name="default_web_client_id">1047095734686-qv31si3dok9l889dis565n3ochpnjaqf.apps.googleusercontent.com</string>
    <string name="error_google_sign_in">Erro ao efetuar login com a conta do Google.</string>
    <string name="button_google_sign_in">BORA COM GOOGLE</string>
    <string name="button_entrar_email_senha">BORA</string>
    <string name="txt_ir_a_tela_cadastro">Não tem conta? Cadastre-se</string>
    <string name="txt_hint_password">Senha</string>
</resources>