<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="16dp">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/edtContato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_contato"
            android:inputType="phone"
            android:padding="12dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:minHeight="48dp"/>

        <TextView
            android:id="@+id/txtCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nao_tem_conta"
            android:textColor="@android:color/holo_blue_dark"
            android:paddingTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            />
    </LinearLayout>
</layout>
