<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rn.tuaobraparapedreiro.ui.home.HomeFragment"
        android:label="@string/title_demanda"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.rn.tuaobraparapedreiro.ui.contato.ContatoFragment"
        android:label="@string/title_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rn.tuaobraparapedreiro.ui.mais.MaisFragment"
        android:label="@string/title_mais"
        tools:layout="@layout/fragment_mais" />
</navigation>